force-app/main/default/objects/Scheme_Credit__c/Scheme_Credit__c.object-meta.xml
<CustomObject>
    <label>Scheme Credit</label>
    <nameField>
        <displayFormat>SC{000}</displayFormat>
        <label>Scheme Credit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheme Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>