force-app/main/default/objects/Scheme_Credit__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scheme Credits</relationshipLabel>
    <relationshipName>Scheme_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>