force-app/main/default/objects/Scheme_Credit__c/fields/Period__c.field-meta.xml
<CustomField>
    <fullName>Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Period</label>
    <referenceTo>Period__c</referenceTo>
    <relationshipLabel>Scheme Credits</relationshipLabel>
    <relationshipName>Scheme_Credits</relationshipName>
    <type>Lookup</type>
</CustomField>